--- a/1-introduccion.tex
+++ b/1-introduccion.tex
@@ -136,7 +136,7 @@ En caso de incidente, el socorrista-piloto conducirá el drone con el mando de r
 \centering
 \includegraphics[width=0.9\textwidth]{socorrista}
 \caption{Drone de Salvamento Marítimo}
-\label{fig:amazon}
+\label{fig:socorrista}
 \end{figure}
 
 \subsubsection{Drones en el cine y televisión.}
